# openapi-to-pydantic

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  SPEC.md  pyproject.toml
src/: project_pylint_rules.py
src/openapi_to_pydantic_generator/: __init__.py  __main__.py  cli.py  codegen_ast.py  generator.py  json_types.py  loader.py  model_types.py  module_loading.py  naming.py  normalize.py  resolver.py  schema_to_models.py  schema_utils.py  verify.py  writer.py
tests/: fixture_helpers.py  test_fixtures.py  test_generator.py  test_normalize.py  test_project_pylint_rules.py  test_schema_converter.py
tests/fixtures/openapi_specs/: README.md  confluence.yaml  gw-api-spec.yaml  jira.yaml
