[project]
name = "openapi-to-pydantic-generator"
version = "0.1.0"
description = "OpenAPI to endpoint-scoped Pydantic model generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
]

[project.scripts]
openapi-to-pydantic-generator = "openapi_to_pydantic_generator.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "openapi-python-client>=0.28.2",
    "pre-commit>=4.5.1",
    "pydoclint>=0.8.3",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "types-jsonschema>=4.26.0.20260202",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["D", "F", "E", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = ["astroid", "astroid.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pylint", "pylint.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["project_pylint_rules"]
disallow_subclassing_any = false

[tool.pylint.main]
py-version = "3.12"
load-plugins = ["project_pylint_rules"]

[tool.pylint.basic]
typealias-rgx = "^[A-Z][a-zA-Z0-9]*$"
